@@ -19,17 +19,17 @@ A cross platform front-end GUI of the popular [youtube-dl](https://rg3.github.io
 * [GNU gettext](https://www.gnu.org/software/gettext/)
 
 ## Downloads
-* [SHA2-256SUMS](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.3/SHA2-256SUMS)
-* [youtube-dlg](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.3/youtube-dlg)
-* [youtube-dlg.exe](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.3/youtube-dlg.exe)
-* [Source (.zip)](https://github.com/oleksis/youtube-dl-gui/archive/v1.1.3.zip)
-* [Source (.tar.gz)](https://github.com/oleksis/youtube-dl-gui/archive/v1.1.3.tar.gz)
+* [SHA2-256SUMS](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.4/SHA2-256SUMS)
+* [youtube-dlg](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.4/youtube-dlg)
+* [youtube-dlg.exe](https://github.com/oleksis/youtube-dl-gui/releases/download/v1.1.4/youtube-dlg.exe)
+* [Source (.zip)](https://github.com/oleksis/youtube-dl-gui/archive/v1.1.4.zip)
+* [Source (.tar.gz)](https://github.com/oleksis/youtube-dl-gui/archive/v1.1.4.tar.gz)
 
 ## Installation
 
 ### Install From Source
 * Download & extract the source
-* Change directory into *youtube-dl-gui-1.1.3*
+* Change directory into *youtube-dl-gui-1.1.4*
 * Create virtual environment 
 ```
 python3 -m venv env
