@@ -22,6 +22,7 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 - Do not interpret output [debug] as an error in the Logs
 - Get all Logs except "ffmpeg version"
 - Do not send messages to the GUI if the app does not exist (Destroy)
+- Close properly the file descriptors
 
 ### Changed
 - Migration to Python 3.*
